charts/services/media-management/jellyfin/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media-management
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: linuxserver/jellyfin:10.8.13
        livenessProbe:
          exec:
            command:
            - curl
            - -f
            - http://localhost:8096/jellyfin/health
          failureThreshold: 5
          periodSeconds: 10
          timeoutSeconds: 5
        ports:
        - name: jellyfin-http
          containerPort: 8096
        - name: jellyfin-https
          containerPort: 8920
        volumeMounts:
        - name: config
          mountPath: /config
      securityContext:
        supplementalGroups:
        - 44
      volumes:
      - name: config
        persistentVolumeClaim:
        claimName: local-path-pvc
