charts/services/media-management/jellyfin/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media-management
spec:
  type: LoadBalancer
  ports:
  - port: 8096
    targetPort: jellyfinHttp
  - port: 8920
    targetPort: jellyfinHttps
  selector:
    app: jellyfin
