charts/services/media-management/jellyfin/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: media-management
spec:
  rules:
  - host: jellyfin2.thebatcave.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin-loadbalancer
            port:
              name: jellyfin-http
